--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Hello World!</title>
+  <title>FTP client</title>
   <link href="ftp.css" rel="stylesheet" type="text/css">
   </link>
 </head>
